--- a/gdb/doc/observer.texi
+++ b/gdb/doc/observer.texi
@@ -307,7 +307,8 @@ This observer is used for internal testing.  Do not use.
 See testsuite/gdb.gdb/observer.exp.
 @end deftypefun
 
-@deftypefun void user_selected_context_changed (user_selected_what @var{selection})
-The user-selected inferior, thread and/or frame has changed.  The user_select_what
-flag specifies if the inferior, thread and/or frame has changed.
+@deftypefun void global_user_selection_changed (user_selection *@var{us}, user_selected_what @var{selection})
+The user-selected inferior, thread and/or frame in US has changed.  The
+user_select_what flag specifies if the inferior, thread and/or frame has
+changed.
 @end deftypefun
