Fix indentation in gdb.mi/mi-stack.exp
This patch fixes the indentation in gdb.mi/mi-stack.exp, which is a bit
inconsistent.

gdb/testsuite/ChangeLog:

	* gdb.mi/mi-stack.exp: Fix indentation.

--- a/gdb/testsuite/ChangeLog
+++ b/gdb/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2017-12-16  Simon Marchi  <simon.marchi@polymtl.ca>
+
+	* gdb.mi/mi-stack.exp: Fix indentation.
+
 2017-12-18  Joel Brobecker  <brobecker@adacore.com>
 
 	* gdb.dwarf2/ada-valprint-error.c: New file.
